--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -7,6 +7,8 @@ on:
       - main
     tags:
       - "v*.*.*"
+    paths-ignore:
+      - '**/README.md'
   pull_request:
 
 # Defines two custom environment variables for the workflow. These are used for the Container registry domain, and a name for the Docker image that this workflow builds.
