--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -25,17 +25,18 @@ jobs:
       contents: read
       packages: write
     steps:
-      - name: Maximize build space
-        uses: easimon/maximize-build-space@master
-        with:
-          build-mount-path: /var/lib/docker/
-          remove-dotnet: 'true'
-          remove-android: 'true'
-          remove-haskell: 'true'
-          remove-codeql: 'true'
-          remove-docker-images: 'true'
-      - name: Restart docker
-        run: sudo service docker restart
+      # No longer needed
+      #      - name: Maximize build space
+      #        uses: easimon/maximize-build-space@master
+      #        with:
+      #          build-mount-path: /var/lib/docker/
+      #          remove-dotnet: 'true'
+      #          remove-android: 'true'
+      #          remove-haskell: 'true'
+      #          remove-codeql: 'true'
+      #          remove-docker-images: 'true'
+      #      - name: Restart docker
+      #        run: sudo service docker restart
       - name: Checkout repository
         uses: actions/checkout@v4
       # Uses the `docker/login-action` action to log in to the Container registry registry using the account and password that will publish the packages. Once published, the packages are scoped to the account defined here.
