--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -81,18 +81,6 @@ jobs:
       contents: read
       packages: write
     steps:
-      # No longer needed
-      #      - name: Maximize build space
-      #        uses: easimon/maximize-build-space@master
-      #        with:
-      #          build-mount-path: /var/lib/docker/
-      #          remove-dotnet: 'true'
-      #          remove-android: 'true'
-      #          remove-haskell: 'true'
-      #          remove-codeql: 'true'
-      #          remove-docker-images: 'true'
-      #      - name: Restart docker
-      #        run: sudo service docker restart
       - name: Checkout repository
         uses: actions/checkout@v4
       # Uses the `docker/login-action` action to log in to the Container registry registry using the account and password that will publish the packages. Once published, the packages are scoped to the account defined here.
@@ -125,7 +113,7 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@f2a1d5e99d037542a71f64918e516c093c6f3fc4
         with:
-          context: https://github.com/vllm-project/vllm.git#v0.5.4:."
+          context: https://github.com/vllm-project/vllm.git#v0.5.4"
           file: Dockerfile.cpu
           push: ${{ github.event_name == 'push' }}
           tags: ${{ steps.meta.outputs.tags }}-cpu
