--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -113,7 +113,7 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@f2a1d5e99d037542a71f64918e516c093c6f3fc4
         with:
-          context: https://github.com/vllm-project/vllm.git#v0.5.4"
+          context: https://github.com/vllm-project/vllm.git#refs/tags/v0.5.4:."
           file: Dockerfile.cpu
           push: ${{ github.event_name == 'push' }}
           tags: ${{ steps.meta.outputs.tags }}-cpu
