fix the suffix to include -

--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -103,7 +103,7 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           flavor: |
-            suffix=cpu
+            suffix=-cpu
           images: |
             ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
             ${{ env.IMAGE_NAME }}
