remove latest for cpu

--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -103,6 +103,7 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           flavor: |
+            latest=false
             suffix=-cpu
           images: |
             ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
