--- a/Dockerfile.gpu
+++ b/Dockerfile.gpu
@@ -1,10 +1,12 @@
-ARG VERSION=v0.6.3
 ARG CUDA_VERSION=12.4.1
-ARG PYTHON_VERSION=3.12
 FROM nvidia/cuda:${CUDA_VERSION}-cudnn-runtime-ubuntu22.04
 ENV PORT 8080
-RUN apt-get update && apt-get install -y python3 python3-pip
-RUN pip3 install flashinfer -i https://flashinfer.ai/whl/cu124/torch2.4/
-RUN pip3 install vllm==${VERSION}
+ENV VERSION=0.6.3
+RUN apt-get update -y && apt-get install -y python3 python3-pip \
+    && rm -rf /var/lib/apt/lists/*
+
+RUN --mount=type=cache,target=/root/.cache/pip \
+    pip3 install -i https://flashinfer.ai/whl/cu124/torch2.4/ \
+          vllm==${VERSION} flashinfer
 
 ENTRYPOINT ["python3", "-m", "vllm.entrypoints.openai.api_server"]
