--- a/Dockerfile.tpu
+++ b/Dockerfile.tpu
@@ -1,10 +1,8 @@
 ARG NIGHTLY_DATE="20240828"
 ARG BASE_IMAGE="us-central1-docker.pkg.dev/tpu-pytorch-releases/docker/xla:nightly_3.10_tpuvm_$NIGHTLY_DATE"
 ARG VERSION=0.6.3
-
-
-
 FROM $BASE_IMAGE
+ARG VERSION
 WORKDIR /workspace
 
 # Install some basic utilities
