--- a/Dockerfile.gpu
+++ b/Dockerfile.gpu
@@ -5,8 +5,7 @@ ENV VERSION=0.6.3
 RUN apt-get update -y && apt-get install -y python3 python3-pip \
     && rm -rf /var/lib/apt/lists/*
 
-RUN --mount=type=cache,target=/root/.cache/pip \
-    pip3 install -i https://flashinfer.ai/whl/cu124/torch2.4/ flashinfer && \
-    pip3 install vllm==${VERSION}
+RUN pip3 --no-cache-dir install -i https://flashinfer.ai/whl/cu124/torch2.4/ flashinfer
+RUN pip3 --no-cache-dir install vllm==${VERSION}
 
 ENTRYPOINT ["python3", "-m", "vllm.entrypoints.openai.api_server"]
