use single image tag and logs

--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -64,8 +64,10 @@ jobs:
           cache-to: type=gha,mode=max
       - name: Test Docker image using curl
         run: |
-          docker run --rm -d -p 8000:8000 ${{ steps.meta.outputs.tags }} \
+          FIRST_TAG=$(echo '${{ steps.meta.outputs.tags }}' | head -n 1)
+          docker run --rm -d --name vllm -p 8000:8000 ${FIRST_TAG} \
             --model facebook/opt-125m
+          docker logs vllm &
           curl http://localhost:8000/v1/completions \
             -H "Content-Type: application/json" \
             -d '{
