--- a/Dockerfile.cpu
+++ b/Dockerfile.cpu
@@ -36,7 +36,7 @@ RUN --mount=type=cache,target=/root/.cache/pip \
     pip install -r requirements-build.txt
 
 # install oneDNN
-RUN git clone -b rls-v3.5 https://github.com/oneapi-src/oneDNN.git
+RUN git clone --depth 1 -b v3.6.1 https://github.com/oneapi-src/oneDNN.git
 
 RUN --mount=type=cache,target=/root/.cache/ccache \
     cmake -B ./oneDNN/build -S ./oneDNN -G Ninja -DONEDNN_LIBRARY_TYPE=STATIC \
