--- a/Dockerfile.cpu
+++ b/Dockerfile.cpu
@@ -29,6 +29,9 @@ WORKDIR /workspace
 RUN git clone https://github.com/vllm-project/vllm.git && cd vllm && git checkout v${VERSION}
 WORKDIR /workspace/vllm
 
+# Fix needed for oneDNN, see: https://github.com/vllm-project/vllm/pull/9344#issuecomment-2480921672
+RUN sed -i 's/ONEDNN_ENABLE_JIT_PROFILING "OFF"/ONEDNN_ENABLE_JIT_PROFILING "ON"/' cmake/cpu_extension.cmake
+
 ARG PIP_EXTRA_INDEX_URL="https://download.pytorch.org/whl/cpu"
 ENV PIP_EXTRA_INDEX_URL=${PIP_EXTRA_INDEX_URL}
 RUN --mount=type=cache,target=/root/.cache/pip \
@@ -36,17 +39,17 @@ RUN --mount=type=cache,target=/root/.cache/pip \
     pip install -r requirements-build.txt
 
 # install oneDNN
-RUN git clone --depth 1 -b v3.6.1 https://github.com/oneapi-src/oneDNN.git
-
-RUN --mount=type=cache,target=/root/.cache/ccache \
-    cmake -B ./oneDNN/build -S ./oneDNN -G Ninja -DONEDNN_LIBRARY_TYPE=STATIC \
-    -DONEDNN_BUILD_DOC=OFF \
-    -DONEDNN_BUILD_EXAMPLES=OFF \
-    -DONEDNN_BUILD_TESTS=OFF \
-    -DONEDNN_BUILD_GRAPH=OFF \
-    -DONEDNN_ENABLE_WORKLOAD=INFERENCE \
-    -DONEDNN_ENABLE_PRIMITIVE=MATMUL && \
-    cmake --build ./oneDNN/build --target install --config Release
+# RUN git clone --depth 1 -b v3.6.1 https://github.com/oneapi-src/oneDNN.git
+#
+# RUN --mount=type=cache,target=/root/.cache/ccache \
+#     cmake -B ./oneDNN/build -S ./oneDNN -G Ninja -DONEDNN_LIBRARY_TYPE=STATIC \
+#     -DONEDNN_BUILD_DOC=OFF \
+#     -DONEDNN_BUILD_EXAMPLES=OFF \
+#     -DONEDNN_BUILD_TESTS=OFF \
+#     -DONEDNN_BUILD_GRAPH=OFF \
+#     -DONEDNN_ENABLE_WORKLOAD=INFERENCE \
+#     -DONEDNN_ENABLE_PRIMITIVE=MATMUL && \
+#     cmake --build ./oneDNN/build --target install --config Release
 
 FROM cpu-test-1 AS build
 WORKDIR /workspace/vllm
@@ -57,6 +60,7 @@ RUN --mount=type=cache,target=/root/.cache/pip \
 # Support for building with non-AVX512 vLLM: docker build --build-arg VLLM_CPU_DISABLE_AVX512="true" ...
 ARG VLLM_CPU_DISABLE_AVX512
 ENV VLLM_CPU_DISABLE_AVX512=${VLLM_CPU_DISABLE_AVX512}
+
 
 RUN --mount=type=cache,target=/root/.cache/pip \
     --mount=type=cache,target=/root/.cache/ccache \
