--- a/Dockerfile.cpu
+++ b/Dockerfile.cpu
@@ -30,10 +30,11 @@ RUN git clone https://github.com/vllm-project/vllm.git && cd vllm && git checkou
 WORKDIR /workspace/vllm
 
 # Fix needed for oneDNN, see: https://github.com/vllm-project/vllm/pull/9344#issuecomment-2480921672
-RUN sed -i 's/ONEDNN_ENABLE_JIT_PROFILING "OFF"/ONEDNN_ENABLE_JIT_PROFILING "ON"/' cmake/cpu_extension.cmake
-RUN sed -i 's/ONEDNN_ENABLE_ITT_TASKS "OFF"/ONEDNN_ENABLE_ITT_TASKS "ON"/' cmake/cpu_extension.cmake
-RUN sed -i 's/ONEDNN_ENABLE_MAX_CPU_ISA "OFF"/ONEDNN_ENABLE_MAX_CPU_ISA "ON"/' cmake/cpu_extension.cmake
-RUN sed -i 's/ONEDNN_ENABLE_CPU_ISA_HINTS "OFF"/ONEDNN_ENABLE_CPU_ISA_HINTS "ON"/' cmake/cpu_extension.cmake
+# RUN sed -i 's/ONEDNN_ENABLE_JIT_PROFILING "OFF"/ONEDNN_ENABLE_JIT_PROFILING "ON"/' cmake/cpu_extension.cmake
+# RUN sed -i 's/ONEDNN_ENABLE_ITT_TASKS "OFF"/ONEDNN_ENABLE_ITT_TASKS "ON"/' cmake/cpu_extension.cmake
+# RUN sed -i 's/ONEDNN_ENABLE_MAX_CPU_ISA "OFF"/ONEDNN_ENABLE_MAX_CPU_ISA "ON"/' cmake/cpu_extension.cmake
+# RUN sed -i 's/ONEDNN_ENABLE_CPU_ISA_HINTS "OFF"/ONEDNN_ENABLE_CPU_ISA_HINTS "ON"/' cmake/cpu_extension.cmake
+RUN sed -i 's/if (AVX512_FOUND AND NOT AVX512_DISABLED)/if (AVX512_FOUND OR AVX2_FOUND)/' cmake/cpu_extension.cmake
 RUN cat cmake/cpu_extension.cmake
 
 ARG PIP_EXTRA_INDEX_URL="https://download.pytorch.org/whl/cpu"
