--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -24,6 +24,17 @@ jobs:
       contents: read
       packages: write
     steps:
+      - name: Maximize build space
+        uses: easimon/maximize-build-space@master
+        with:
+          build-mount-path: /var/lib/docker/
+          remove-dotnet: 'true'
+          remove-android: 'true'
+          remove-haskell: 'true'
+          remove-codeql: 'true'
+          remove-docker-images: 'true'
+      - name: Restart docker
+        run: sudo service docker restart
       - name: Checkout repository
         uses: actions/checkout@v4
       - name: Set up Docker Buildx
