--- a/Dockerfile.cuda-arm
+++ b/Dockerfile.cuda-arm
@@ -6,13 +6,13 @@ ARG PYTHON_VERSION=3.12
 # ---------- Builder Base ----------
 FROM nvcr.io/nvidia/cuda:${CUDA_VERSION}-devel-${IMAGE_DISTRO} AS base
 
-# Set arch lists for all targets
-# 'a' suffix is not forward compatible but enables all optimizations
-ARG TORCH_CUDA_ARCH_LIST="9.0a"
-ENV TORCH_CUDA_ARCH_LIST=${TORCH_CUDA_ARCH_LIST}
-ARG VLLM_FA_CMAKE_GPU_ARCHES="90a-real"
-ENV VLLM_FA_CMAKE_GPU_ARCHES=${VLLM_FA_CMAKE_GPU_ARCHES}
+# Set arch lists for all targets using upstream values
+ARG torch_cuda_arch_list='7.0 7.5 8.0 8.6 8.9 9.0+PTX'
+ENV TORCH_CUDA_ARCH_LIST=${torch_cuda_arch_list}
+ARG vllm_fa_cmake_gpu_arches='80-real;90-real'
+ENV VLLM_FA_CMAKE_GPU_ARCHES=${vllm_fa_cmake_gpu_arches}
 ENV MAX_JOBS=16
+ENV UV_HTTP_TIMEOUT=500
 
 # Update apt packages and install dependencies
 ENV DEBIAN_FRONTEND=noninteractive
@@ -48,14 +48,16 @@ ENV CUDA_HOME=/usr/local/cuda
 ENV LD_LIBRARY_PATH=${CUDA_HOME}/lib64:${LD_LIBRARY_PATH}
 
 # Install pytorch nightly
-RUN uv pip install torch torchvision torchaudio --extra-index-url https://download.pytorch.org/whl/cu126
+RUN --mount=type=cache,target=/root/.cache/uv \
+    uv pip install torch torchvision torchaudio --extra-index-url https://download.pytorch.org/whl/cu126
 
 FROM base AS build-base
 RUN mkdir /wheels
 
 # Install build deps that aren't in project requirements files
 # Make sure to upgrade setuptools to avoid triton build bug
-RUN uv pip install -U build cmake ninja pybind11 setuptools wheel
+RUN --mount=type=cache,target=/root/.cache/uv \
+    uv pip install -U build cmake ninja pybind11 setuptools wheel
 
 FROM build-base AS build-triton
 ARG TRITON_REF=release/3.2.x
@@ -108,20 +110,24 @@ COPY --from=build-vllm /wheels/* wheels/
 COPY --from=build-xformers /wheels/* wheels/
 
 # Install and cleanup wheels
-RUN uv pip install wheels/*
+RUN --mount=type=cache,target=/root/.cache/uv \
+    uv pip install wheels/*
 RUN rm -r wheels
 
 # Install pynvml
-RUN uv pip install pynvml
+RUN --mount=type=cache,target=/root/.cache/uv \
+    uv pip install pynvml
 
 # Add additional packages for vLLM OpenAI
-RUN uv pip install accelerate hf_transfer modelscope bitsandbytes timm boto3 runai-model-streamer runai-model-streamer[s3] tensorizer
+RUN --mount=type=cache,target=/root/.cache/uv \
+    uv pip install accelerate hf_transfer 'modelscope!=1.15.0' 'bitsandbytes>=0.45.3' 'timm==0.9.10' boto3 runai-model-streamer runai-model-streamer[s3] tensorizer
 
 # Clean uv cache
 RUN uv clean
 
 # Enable hf-transfer
 ENV HF_HUB_ENABLE_HF_TRANSFER=1
+ENV VLLM_USAGE_SOURCE=kubeai
 
 # API server entrypoint
-ENTRYPOINT ["vllm", "serve"]
+ENTRYPOINT ["python3", "-m", "vllm.entrypoints.openai.api_server"]
