--- a/Dockerfile.cuda-arm
+++ b/Dockerfile.cuda-arm
@@ -59,16 +59,16 @@ RUN mkdir /wheels
 RUN --mount=type=cache,target=/root/.cache/uv \
     uv pip install -U build cmake ninja pybind11 setuptools wheel
 
-FROM build-base AS build-triton
-ARG TRITON_REF=release/3.2.x
-ARG TRITON_BUILD_SUFFIX=+cu126
-ENV TRITON_WHEEL_VERSION_SUFFIX=${TRITON_BUILD_SUFFIX:-}
-RUN git clone https://github.com/triton-lang/triton.git
-RUN cd triton && \
-    git checkout ${TRITON_REF} && \
-    git submodule sync && \
-    git submodule update --init --recursive -j 8 && \
-    uv build python --wheel --no-build-isolation -o /wheels
+# FROM build-base AS build-triton
+# ARG TRITON_REF=release/3.2.x
+# ARG TRITON_BUILD_SUFFIX=+cu126
+# ENV TRITON_WHEEL_VERSION_SUFFIX=${TRITON_BUILD_SUFFIX:-}
+# RUN git clone https://github.com/triton-lang/triton.git
+# RUN cd triton && \
+#     git checkout ${TRITON_REF} && \
+#     git submodule sync && \
+#     git submodule update --init --recursive -j 8 && \
+#     uv build python --wheel --no-build-isolation -o /wheels
 
 FROM build-base AS build-xformers
 ARG XFORMERS_REF=v0.0.29.post2
@@ -109,9 +109,13 @@ RUN cd vllm && \
 
 FROM base AS vllm-openai
 COPY --from=build-flashinfer /wheels/* wheels/
-COPY --from=build-triton /wheels/* wheels/
+# COPY --from=build-triton /wheels/* wheels/
 COPY --from=build-vllm /wheels/* wheels/
 COPY --from=build-xformers /wheels/* wheels/
+
+# Install triton using upstream wheel
+RUN --mount=type=cache,target=/root/.cache/uv \
+    uv pip install --system --index-url https://download.pytorch.org/whl/nightly/cu128 --pre pytorch_triton==3.3.0+gitab727c40;
 
 # Install and cleanup wheels
 RUN --mount=type=cache,target=/root/.cache/uv \
