--- a/Dockerfile.cuda-arm
+++ b/Dockerfile.cuda-arm
@@ -11,7 +11,6 @@ ARG torch_cuda_arch_list='7.0 7.5 8.0 8.6 8.9 9.0+PTX'
 ENV TORCH_CUDA_ARCH_LIST=${torch_cuda_arch_list}
 ARG vllm_fa_cmake_gpu_arches='80-real;90-real'
 ENV VLLM_FA_CMAKE_GPU_ARCHES=${vllm_fa_cmake_gpu_arches}
-ENV MAX_JOBS=16
 ENV UV_HTTP_TIMEOUT=500
 
 # Update apt packages and install dependencies
@@ -93,6 +92,8 @@ RUN cd flashinfer && \
     git checkout ${FLASHINFER_REF} && \
     git submodule sync && \
     git submodule update --init --recursive -j 8 && \
+    NVCC_THREADS=2 \
+    MAX_JOBS=16 \
     uv build --wheel --no-build-isolation -o /wheels
 # Restore original CUDA arch list for subsequent stages
 ENV TORCH_CUDA_ARCH_LIST=${torch_cuda_arch_list}
@@ -105,6 +106,10 @@ RUN cd vllm && \
     git submodule sync && \
     git submodule update --init --recursive -j 8 && \
     uv pip install -r requirements/build.txt && \
+    # Disable problematic Flash Attention components for ARM64
+    FLASH_ATTENTION_SKIP_CUDA_BUILD=1 \
+    NVCC_THREADS=2 \
+    MAX_JOBS=16 \
     uv build --wheel --no-build-isolation -o /wheels
 
 FROM base AS vllm-openai
